<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="28dp"
    android:theme="@style/EditorTheme"
    tools:context=".EditorActivity">

    <!-- Book category -->
    <LinearLayout
        android:id="@+id/container_book"
        style="@style/ContainerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_book" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_title"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Book category -->
    <LinearLayout
        android:id="@+id/container_author"
        style="@style/ContainerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_author" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_author"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>
    <!-- Style category -->
    <LinearLayout
        android:id="@+id/container_book_style"
        style="@style/ContainerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="Style" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_style"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_price"
        style="@style/ContainerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingEnd="4dp"
            android:text="Price" />

        <TextView
            style="@style/EditorMoneySymbol"
            android:text="$" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        style="@style/ContainerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="Quantity" />

        <!-- Input fields -->
        <LinearLayout
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/subtract_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_toStartOf="@id/quantity"
                android:background="@drawable/ic_action_down" />

            <TextView
                android:id="@+id/quantity"
                style="@style/quantity_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="00" />

            <Button
                android:id="@+id/add_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_toEndOf="@id/quantity"
                android:background="@drawable/ic_action_up" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="#fdd44f" />

    <LinearLayout
        android:id="@+id/container_supplier"
        style="@style/ContainerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Supplier section -->
        <TextView
            style="@style/CategoryStyle"
            android:text="Supplier" />

        <!-- Supplier Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_below="@id/edit_supplier_name"
                android:layout_alignStart="@+id/edit_supplier_name"
                android:layout_gravity="bottom"
                android:layout_marginTop="6dp"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/call_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_supplier_name"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/edit_supplier_phone"
                android:background="#5bffd54f"
                android:contentDescription="Call Supplier at number listed"
                android:padding="4dp"
                android:text="call to reorder" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>

